src/Test/Fixtures/Good/Arrays/negativeParamArrayDeclaration.lf
let params : [param; 1] = - [Param("theta")];
