src/Test/Fixtures/Bad/TypeQualifier/missingArrayLengthInLinearScratchTypedBinding.lf
let linear scratch qs: [qubit; ] = qalloc(2);
